User registration improvements

--- a/doc-site-app/src/main/resources/db.changelog/db.changelog-mock-0.0.1.yaml
+++ b/doc-site-app/src/main/resources/db.changelog/db.changelog-mock-0.0.1.yaml
@@ -121,6 +121,9 @@ databaseChangeLog:
                 name: person_id
                 value: 1
             - column:
+                name: email
+                value: michal.siron@centrum.cz
+            - column:
                 name: username
                 value: sironm
             - column:
