--- a/doc-site-app/src/main/resources/db.changelog/db.changelog-tables-0.0.1.yaml
+++ b/doc-site-app/src/main/resources/db.changelog/db.changelog-tables-0.0.1.yaml
@@ -283,6 +283,11 @@ databaseChangeLog:
             name: person_id
             type: bigint
             constraints:
+              nullable: true
+        - column:
+            name: email
+            type: varchar(50)
+            constraints:
               nullable: false
         - column:
             name: username
@@ -361,7 +366,7 @@ databaseChangeLog:
             name: address_id
             type: bigint
             constraints:
-              nullable: false
+              nullable: true
         - column:
             name: created_at
             type: timestamp without time zone
